update github url from merit to meritlabs

--- a/doc/man/merit-tx.1
+++ b/doc/man/merit-tx.1
@@ -111,7 +111,7 @@ Copyright (C) 2009-2017 The Bitcoin Core developers
 
 Please contribute if you find Merit Core useful. Visit
 <https://meritcore.org> for further information about the software.
-The source code is available from <https://github.com/merit/merit>.
+The source code is available from <https://github.com/meritlabs/merit>.
 
 This is experimental software.
 Distributed under the MIT software license, see the accompanying file COPYING
